--- a/portfolio-app/src/index.css
+++ b/portfolio-app/src/index.css
@@ -104,6 +104,8 @@ img {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+  /* margin-left: 4rem; */
+  /* margin-right: 12rem; */
 }
 
 .grid {
