--- a/portfolio-app/src/components/about/about.css
+++ b/portfolio-app/src/components/about/about.css
@@ -158,7 +158,7 @@
         row-gap: 1.875rem;
     }
   
-    .about__data::before{
+    .about__info::before{
       border-left: 10px solid transparent;
       border-right: 10px solid transparent;
       border-bottom: 10px soliud #fff;
